--- a/style.css
+++ b/style.css
@@ -1,9 +1,99 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
+    font-family: "Poppins", sans-serif;
 }
 
 body {
     box-sizing: border-box;
-    background-color: #AAAAAA;
+    /* background-color: #AAAAAA; */
+}
+
+.margin {
+    margin: 80px 120px;
+}
+
+
+.header-section {
+    max-width: 1440px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.site-title {
+    font-size: 1.5em;
+    font-weight: 700;
+    color: rgb(58, 58, 58);
+}
+
+.nav-menu ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 32px;
+}
+
+ul li {
+    list-style: none;
+}
+
+ul li a {
+    text-decoration: none;
+    font-size: 1em;
+    font-weight: 600;
+    color: rgb(58, 58, 58);
+}
+
+.hero-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.hero-section-content {
+    padding: 70px 0px;
+}
+
+.hero-section-content h1 {
+    font-size: 40px;
+    font-weight: 700;
+    color: rgb(58, 58, 58);
+}
+
+.hero-section-content p {
+    font-size: 14px;
+    font-weight: 600;
+    color: rgb(58, 58, 58);
+    padding: 15px 70px 15px 0px;
+}
+
+button {
+    color: white;
+    background-color: #E02C6D;
+    border: none;
+    border-radius: 40px;
+    padding: 10px 24px;
+}
+
+.hero-section-image {
+    background-image: url("/images/Circle\ design.svg");
+    margin: 40px 6px 40px 0px;
+    width: 490;
+    height: 490px;
+
+    /* background-position: right; */
+    background-repeat: no-repeat;
+
+}
+
+.hero-image {
+
+    padding: 20px 20px;
 }
