--- a/responsive.css
+++ b/responsive.css
@@ -15,7 +15,6 @@
 
     }
 
-
     .site-title {
         font-size: 1.5em;
         font-weight: 600;
@@ -56,4 +55,15 @@
     .hero-section-content p {
         padding: 15px;
     }
+
+    /* E-commerce-site */
+
+    .e-commerce-site {
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 32px;
+        margin: 50px 40px;
+    }
+
+
 }
