--- a/style.css
+++ b/style.css
@@ -108,11 +108,103 @@ button {
     justify-content: space-between;
     align-items: center;
     margin: 100px 165px;
+    padding: 30px 60px;
 
 }
 
+.product-card i {
+    color: yellow;
+}
 
 .site-logo img {
 
     width: 100%;
+}
+
+/* popular-collection */
+
+.popular-collection h3 {
+    text-align: center;
+    font-size: 28px;
+    font-weight: 500;
+    color: #3A3A3A;
+
+}
+
+.popular-collection-card {
+
+    margin: 30px 120px;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+}
+
+.product-card {
+    box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    padding: 14px;
+
+}
+
+.product-card img {
+    width: 100%;
+}
+
+.product-card h4 {
+    color: #18191F;
+    font-size: 26px;
+    font-weight: 600;
+    margin: 10px 0;
+
+}
+
+.product-card p {
+    color: #787885;
+    font-size: 14px;
+    font-weight: 700;
+    margin: 10px 0;
+}
+
+.see-more {
+    margin-right: 120px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    color: #E02C6D87;
+}
+
+.featured-products {
+    margin: 20px 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 100px;
+}
+
+.product-content p {
+    padding: 14px 100px 14px 0px;
+}
+
+
+
+.btn {
+    border-radius: 0px;
+}
+
+footer {
+    padding: 50px;
+    text-align: center;
+    color: white;
+    background-color: #040a2d;
+}
+
+.socal-icon {
+    padding-top: 17px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
